# my-http-server-from-scratch

./: CMakeLists.txt  README.md  client.cc
Protocol/: CMakeLists.txt
Protocol/include/Protocol/: Comm.hpp  Http.hpp  Protocol.hpp
Protocol/src/: Protocol.cc
Protocol/test/: CMakeLists.txt  test.cc
Reactor/: CMakeLists.txt
Reactor/include/Reactor/: Reactor.hpp
Reactor/src/: Reactor.cc
Reactor/test/: CMakeLists.txt  test.cc
Resource/: index.html
TestDemo/: CMakeLists.txt  testdemo.cc
googletest/: README.md
